# yrs-scaleable-server

./: .env  Cargo.toml  Dockerfile  README.md
core-server/: Cargo.toml
core-server/src/: channel.rs  main.rs  routes.rs  types.rs  utils.rs  ws_actor.rs
core-server/src/config/: app_state.rs  mod.rs
core-server/src/socket_message/: handle_event.rs  mod.rs
db-helper/: Cargo.toml
db-helper/src/: lib.rs
db-helper/src/db/: mongo.rs
db-helper/src/entity/: mod.rs  transaction_entity.rs
db-helper/src/read_updates/: mod.rs  mongo.rs
db-helper/src/write_updates/: mod.rs  mongo.rs  postgres.rs
persist-server/: Cargo.toml
