[package]
edition = "2021"
name = "core-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = {version = "0.13.0"}
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
bb8 = "0.8.0"
bb8-mongodb = "0.2.0"
db-helper = {path = "../db-helper"}
envfile = "0.2.1"
mongodb = "2.4.0"
