[package]
edition = "2021"
name = "db-helper"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.4.0", features = ["serde"]}
serde = {version = "1.0.159", features = ["derive"]}
serde_bytes = "0.11.9"
serde_json = "1.0.95"
